# MovieCode-Windows

./: .gitignore  LICENSE  PROJECT_PLAN.md  README.md  UI_Preview.html  package-lock.json  package.json
.github/workflows/: tauri.yml
.playwright-cli/: page-2026-03-22T07-34-17-617Z.yml  page-2026-03-22T07-34-41-395Z.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  media.rs  nas.rs  playback.rs
src/components/downloads/: DownloadManager.tsx
src/components/home/: PosterCardWithProgress.tsx  PosterWall.tsx
src/components/layout/: Layout.tsx
src/components/player/: ResumeDialog.tsx  VideoPlayer.tsx
src/components/settings/: ParentalControls.tsx  SettingsPanel.tsx  ThemeSettings.tsx
src/pages/: HistoryPage.tsx  HomePage.tsx  PlayerPage.tsx  RecommendPage.tsx
src/services/: dlna.ts  imageCache.ts  mediaMatcher.ts  mediaServer.ts  mediaServer.tsx  recommendationService.ts  webdav.ts
src/services/api/: tmdb.ts  tmdbCache.ts
src/stores/: downloadStore.ts  index.ts  userStore.ts
src/styles/: globals.css
src/types/: index.ts
