[package]
name = "moviecode"
version = "2.0.0"
description = "MovieCode - Windows Media Center Application"
authors = ["MovieCode Team"]
edition = "2021"

[lib]
name = "moviecode_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
log = "0.4"
env_logger = "0.11"
thiserror = "1"
reqwest = { version = "0.12", features = ["blocking"] }
once_cell = "1.19"
dirs-next = "2.0"
